--- a/TranslateBot/wwwroot/default.htm
+++ b/TranslateBot/wwwroot/default.htm
@@ -264,7 +264,7 @@
             }
 
             .header-text {
-                font-size: 40x;
+                font-size: 40px;
             }
 
             .column {
@@ -396,7 +396,7 @@
         </div>
     </header>
     <div class="row">
-        <div class="column" class="main-content-area">
+        <div class="column main-content-area">
             <div class="content-title">Your bot is ready!</div>
             <div class="main-text main-text-p1">You can test your bot in the Bot Framework Emulator<br />
                 by connecting to http://localhost:3978/api/messages.</div>
@@ -409,6 +409,7 @@
                 various channels. The bot's endpoint URL typically looks
                 like this:</div>
             <div class="endpoint">https://<i>your_bots_hostname</i>/api/messages</div>
+            <div class="main-text main-text-p1">Для изменения данных нажмите <a  class="ctaLink" href="/Index">ссылку</a>.</div>
         </div>
         <div class="column how-to-iframe" id="how-to-iframe"></div>
     </div>
